workspace = { members = ["examples/*"] }

[package]
name = "async-result"
version = "0.1.0"
edition = "2021"
authors = ["csf"]
description = "A simple wrapper providing a convenient way to await a result, built on futures-channel's oneshot channel."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-channel = "0.3"
